<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/logo_aurevia"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="AUREVIA"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/primary"
            android:gravity="center"
            android:layout_marginBottom="20dp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <EditText
                    android:id="@+id/etCustomerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_customer_name"
                    android:background="@drawable/edittext_border"
                    android:layout_marginBottom="15dp"
                    android:inputType="textPersonName"/>

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:background="@drawable/edittext_border"
                    android:layout_marginBottom="15dp"
                    android:inputType="textEmailAddress"/>

                <EditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_phone"
                    android:background="@drawable/edittext_border"
                    android:layout_marginBottom="15dp"
                    android:inputType="phone"/>

                <EditText
                    android:id="@+id/etEventName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_event_name"
                    android:background="@drawable/edittext_border"
                    android:layout_marginBottom="15dp"/>

                <Button
                    android:id="@+id/btnPickDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_pick_date"
                    android:backgroundTint="@color/background_gray"
                    android:textColor="@color/primary" />

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_default_date"
                    android:gravity="center"
                    android:layout_marginBottom="15dp"/>

                <Spinner
                    android:id="@+id/spCategory"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/edittext_border"
                    android:layout_marginBottom="15dp"/>

                <RadioGroup
                    android:id="@+id/rgVenue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <RadioButton android:id="@+id/rbIndoor" android:text="@string/rb_indoor" android:layout_weight="1" android:layout_width="0dp" android:layout_height="wrap_content"/>
                    <RadioButton android:id="@+id/rbOutdoor" android:text="@string/rb_outdoor" android:layout_weight="1" android:layout_width="0dp" android:layout_height="wrap_content"/>
                </RadioGroup>

                <CheckBox
                    android:id="@+id/cbInsurance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cb_insurance"
                    android:layout_marginTop="10dp"/>

                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:text="@string/btn_submit"
                    android:backgroundTint="@color/primary"
                    android:layout_marginTop="20dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>